--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "^15.6.0",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^15.6.0",
+    "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
